# mysiteapp

./: README.md  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/mysite/: settings.py
mysite/shopapp/: forms.py  urls.py  views.py
mysite/shopapp/templates/shopapp/: user_orders_list.html
